<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="
         http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>


    <!-- Spring Boot Parent -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/>
    </parent>


    <!-- Project Information -->
    <groupId>com.cardpro</groupId>
    <artifactId>cardpro-ai</artifactId>
    <version>1.0.0</version>

    <name>CardPro AI</name>
    <description>CardPro AI Microservices Backend</description>

    <!-- Important for Parent Maven Project -->
    <packaging>pom</packaging>


    <!-- Java Version -->
    <properties>
        <java.version>17</java.version>
    </properties>


    <!-- Microservices Modules -->
    <modules>

        <module>discovery-service</module>
        <module>gateway-service</module>
        <module>auth-service</module>
        <module>card-service</module>
        <module>lead-service</module>
        <module>user-service</module>
        <module>ai-service</module>
        <module>payment-service</module>
        <module>product-service</module>
        <module>order-service</module>

    </modules>


    <!-- Common Dependencies For All Services -->
    <dependencyManagement>

        <dependencies>

            <!-- Spring Cloud BOM -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2025.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>

    </dependencyManagement>


    <!-- Build Configuration -->
    <build>

        <pluginManagement>

            <plugins>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>

            </plugins>

        </pluginManagement>

    </build>


</project>